feat: add 403 and 422 errors schemas
