# Modules/Users/app/Annotations/UsersIndexControllerAnnotations.php
@@ -12,16 +12,24 @@ use OpenApi\Annotations as OA;
  *      summary="Paginated list of users",
  *      description="Returns a paginated list of users; accepts filters and paginate",
  *      @OA\Response(
- *         response=200,
- *         description="successful operation"
+ *          response=200,
+ *          description="successful operation"
  *      ),
- *      @OA\Response(response=400, description="Bad request"),
- *          security={
- *              {"api_key_security_example": {}}
- *          }
- *     )
- *
- * Returns list of projects
+ *      @OA\Response(
+ *          response=400,
+ *          description="Bad request"
+ *      ),
+ *      @OA\Response(
+ *          response=403,
+ *          description="Forbidden",
+ *          @OA\JsonContent(ref="#/components/schemas/unauthorized")
+ *      ),
+ *      @OA\Response(
+ *         response=422,
+ *         description="Validation Error",
+ *         @OA\JsonContent(ref="#/components/schemas/validation-error")
+ *      )
+ * )
  */
 class UsersIndexControllerAnnotations
 {
