# app/Annotations/Schemas/UnauthorizedSchemaAnnotation.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Annotations\Schemas;
+
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="unauthorized",
+ *     title="Forbidden",
+ *     description="You don't have permission to access this resource.",
+ *     type="object",
+ *     required={"message"},
+ *     @OA\Property(
+ *         property="status",
+ *         type="integer",
+ *         example=-1
+ *     ),
+ *     @OA\Property(
+ *         property="message",
+ *         type="string",
+ *         example="ERROR"
+ *     ),
+ *     @OA\Property(
+ *         property="data",
+ *         type="string",
+ *         example="This action is unauthorized."
+ *     )
+ * )
+ */
+class UnauthorizedSchemaAnnotation
+{
+}
